docs-archive/apache-airflow-providers-edge3/5.0.0/_sources/_api/airflow/providers/edge3/cli/worker/index.rst.txt
airflow.providers.edge3.cli.worker
==================================

.. py:module:: airflow.providers.edge3.cli.worker


Attributes
----------

.. autoapisummary::

   airflow.providers.edge3.cli.worker.logger
   airflow.providers.edge3.cli.worker.setproctitle


Classes
-------

.. autoapisummary::

   airflow.providers.edge3.cli.worker.EdgeWorker


Module Contents
---------------

.. py:data:: logger

.. py:data:: setproctitle

.. py:class:: EdgeWorker(pid_file_path, hostname, queues, concurrency, daemon = False, team_name = None)

   Runner instance which executes the Edge Worker.


   .. py:attribute:: jobs
      :type:  list[airflow.providers.edge3.cli.dataclasses.Job]
      :value: []


      List of jobs that the worker is running currently.



   .. py:attribute:: drain
      :type:  bool
      :value: False


      Flag if job processing should be completed and no new jobs fetched for a graceful stop/shutdown.



   .. py:attribute:: drain_started_at
      :type:  float | None
      :value: None


      ``time.monotonic()`` timestamp of when drain was first requested.



   .. py:attribute:: drain_timed_out
      :type:  bool
      :value: False



   .. py:attribute:: drain_kill_deadline
      :type:  float | None
      :value: None



   .. py:attribute:: maintenance_mode
      :type:  bool
      :value: False


      Flag if job processing should be completed and no new jobs fetched for maintenance mode. 



   .. py:attribute:: maintenance_comments
      :type:  str | None
      :value: None


      Comments for maintenance mode.



   .. py:attribute:: versions_match
      :type:  bool
      :value: True


      Whether the worker and the server have matching versions of Airflow and the Edge Provider.



   .. py:attribute:: background_tasks
      :type:  set[asyncio.Task]


   .. py:attribute:: pid_file_path


   .. py:attribute:: hostname


   .. py:attribute:: queues


   .. py:attribute:: concurrency


   .. py:attribute:: daemon
      :value: False



   .. py:attribute:: team_name
      :value: None



   .. py:attribute:: worker_start_time
      :type:  datetime.datetime


   .. py:attribute:: job_poll_interval


   .. py:attribute:: hb_interval


   .. py:attribute:: drain_timeout_sec


   .. py:attribute:: drain_kill_grace_sec


   .. py:attribute:: base_log_folder
      :type:  str


   .. py:attribute:: push_logs


   .. py:attribute:: push_log_chunk_size


   .. py:attribute:: automatic_maintenance_on


   .. py:attribute:: automatic_maintenance_exit


   .. py:attribute:: extended_sysinfo
      :type:  collections.abc.Callable[[], collections.abc.Awaitable[dict[str, str | int | float | datetime.datetime]]] | None
      :value: None



   .. py:property:: free_concurrency
      :type: int


      Calculate the free concurrency of the worker.



   .. py:method:: signal_status()


   .. py:method:: signal_drain()


   .. py:method:: shutdown_handler()


   .. py:method:: start()
      :async:


      Start the execution in a loop until terminated.



   .. py:method:: loop()
      :async:


      Run a loop of scheduling and monitoring tasks.



   .. py:method:: fetch_and_run_job()
      :async:


      Fetch, start and monitor a new job.



   .. py:method:: heartbeat(new_maintenance_comments = None)
      :async:


      Report liveness state of worker to central site with stats.



   .. py:method:: interruptible_sleep()
      :async:


      Sleeps but stops sleeping if drain is made or some job completed.



